2006-08-14  Brian Bidulock  <bidulock@openss7.org>

	* streams.spec.in: get kernel_source right for SUSE smp kernel

2006-08-09  Brian Bidulock  <bidulock@openss7.org>

	* m4/kernel.m4: SLES doesn't include -ffreestanding
	* tests/testsuite-clone.at: wait momentarily on buffer leak check
	* tests/testsuite-connld.at: wait momentarily on buffer leak check
	* tests/testsuite-echo.at: wait momentarily on buffer leak check
	* tests/testsuite-fifo.at: wait momentarily on buffer leak check
	* tests/testsuite-log.at: wait momentarily on buffer leak check
	* tests/testsuite-loop.at: wait momentarily on buffer leak check
	* tests/testsuite-mux.at: wait momentarily on buffer leak check
	* tests/testsuite-nsdev.at: wait momentarily on buffer leak check
	* tests/testsuite-nuls.at: wait momentarily on buffer leak check
	* tests/testsuite-pipe.at: wait momentarily on buffer leak check
	* tests/testsuite-pipemod.at: wait momentarily on buffer leak check
	* tests/testsuite-sad.at: wait momentarily on buffer leak check
	* tests/testsuite-sc.at: wait momentarily on buffer leak check
	* tests/testsuite-streams.at: wait momentarily on buffer leak check
	* src/kernel/strreg.c: correct register_cdev and unregister_cdev
	* src/modules/sth.c: need to push if SMP kernel run on UP machine

2006-08-08  Brian Bidulock  <bidulock@openss7.org>

	* src/kernel/strattach.c:
	  - include linux/security.h before sys/strdebug.h to avoid ptrace
	    conflict on SLES 9
	* src/kernel/strlookup.c:
	  - include linux/security.h before sys/strdebug.h to avoid ptrace
	    conflict on SLES 9
	* src/kernel/strmain.c:
	  - include linux/security.h before sys/strdebug.h to avoid ptrace
	    conflict on SLES 9
	* src/kernel/strpipe.c:
	  - include linux/security.h before sys/strdebug.h to avoid ptrace
	    conflict on SLES 9
	* src/kernel/strprocfs.c:
	  - include linux/security.h before sys/strdebug.h to avoid ptrace
	    conflict on SLES 9
	* src/kernel/strreg.c: