@@ -1,6 +1,13 @@
 2006-08-14  Brian Bidulock  <bidulock@openss7.org>
 
 	* streams.spec.in: get kernel_source right for SUSE smp kernel
+	* acinclude.m4:
+	  - added linux/smp_lock.h header file check for SLES 9
+	  - added kernel symbol lookup for kthread_* functions for SLES 9
+	* src/kernel/strsched.c:
+	  - added kernel symbol lookup for kthread_* functions for SLES 9
+	* src/modules/sth.c:
+	  - added linux/smp_lock.h header file for SLES 9
 
 2006-08-09  Brian Bidulock  <bidulock@openss7.org>
 
